--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@github/spark": "^0.39.0",
         "@heroicons/react": "^2.2.0",
         "@hookform/resolvers": "^4.1.3",
         "@octokit/core": "^6.1.4",
-        "@phosphor-icons/react": "^2.1.7",
+        "@phosphor-icons/react": "^2.1.10",
         "@radix-ui/colors": "^3.0.0",
         "@radix-ui/react-accordion": "^1.2.3",
         "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -72,6 +71,7 @@
         "tw-animate-css": "^1.2.4",
         "uuid": "^11.1.0",
         "vaul": "^1.1.2",
+        "xlsx": "^0.18.5",
         "zod": "^3.25.76"
     },
     "devDependencies": {
@@ -94,5 +94,9 @@
         "packages": [
             "packages/*"
         ]
+    },
+    "optionalDependencies": {
+        "@rollup/rollup-win32-x64-msvc": "^4.53.3",
+        "@swc/core-win32-x64-msvc": "^1.15.2"
     }
 }
