--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "strictNullChecks": true,
+    "types": [],
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -25,9 +26,12 @@
       "@/*": [
         "./src/*"
       ]
-    },
+    }
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+    "src/azureOpenAIService.ts"
   ]
 }
